# MCP_Open

./: .gitignore  ARCHITECTURE.md  BUILD.md  BUILD_WINDOWS.md  CMakeLists.txt  LICENSE  README.md  ci.yml
.github/workflows/: ci.yml
capi/include/: mcp_capi.h
capi/src/: mcp_capi.cpp
config/: mcp_config.json.example  mcp_servers.json.example
csharp/: McpClient.csproj
csharp/src/: CommandRegistry.cs  LLMProvider.cs  McpServer.cs  NativeMethods.cs
include/: EchoCommand.h  ICommandStrategy.h  IRequestHandler.h  IResponseHandler.h  IValidator.h  JsonSchemaValidator.h  Logger.h  ProtocolHandler.h  ThreadPool.h  compiler_definitions.h
include/commands/: CommandRegistry.h  EchoCommand.h  ICommandStrategy.h  ToolMetadata.h
include/core/: CompilerDefinitions.h  Config.h  IRequestHandler.h  IResponseHandler.h  Logger.h  ProtocolHandler.h  ThreadPool.h
include/discovery/: CompositeCommand.h  McpServerEntry.h  McpServerRegistry.h
include/http/: HttplibClient.h  IHttpClient.h
include/llm/: ILLMProvider.h  LLMCommand.h  LiteLLMProvider.h
include/plugins/: DlPlugin.h  IPlugin.h  NativePluginAdapter.h  NativePluginLoader.h  PluginABI.h  ScriptPlugin.h  ScriptPluginAdapter.h  ScriptPluginLoader.h
include/security/: ApiKeyValidator.h  RateLimiter.h  SecurityHeaders.h
include/server/: HttplibServer.h  IServer.h  StdioTransport.h  UwsServer.h
include/skills/: PluginLoader.h  SkillCommand.h  SkillDefinition.h  SkillEngine.h  SkillToolAdapter.h
include/validation/: IValidator.h  InputSanitizer.h  JsonSchemaValidator.h
litellm/: litellm_config.yaml  start_proxy.ps1  start_proxy.sh
plugins/: README.md
plugins/desktop-notification/: CMakeLists.txt  plugin.json
plugins/desktop-notification/hooks/: README.md
plugins/desktop-notification/scripts/: claude_adapter.ps1
plugins/desktop-notification/src/: NotificationBackend.h  desktop-notification.cpp
plugins/desktop_notification/hooks/: hooks.json
plugins/desktop_notification/hooks/generic/: http_adapter.sh
plugins/desktop_notification/src/: NotificationBackend.cpp
plugins/entrian-search/: plugin.json
plugins/entrian-search/skills/entrian-list-indexes/: SKILL.md
plugins/entrian-search/skills/entrian-search/: SKILL.md
plugins/entrian-search/skills/entrian-search/references/: ess-cli.md
plugins/everything-search/: plugin.json
plugins/everything-search/skills/everything-search/: SKILL.md
plugins/everything-search/skills/everything-search/references/: es-cli.md
plugins/example-plugin/: CMakeLists.txt
plugins/example-plugin/src/: example-plugin.cpp
plugins/git-tools/: plugin.json
plugins/git-tools/scripts/: git_tools.py
plugins/github-actions/: plugin.json
plugins/github-actions/scripts/: github_actions.py
plugins/github-tools/: plugin.json
plugins/github-tools/scripts/: github_tools.py
plugins/jira-tools/: plugin.json
plugins/jira-tools/scripts/: jira_tools.py
plugins/jira-tools/skills/jira-get-comments/: SKILL.md
plugins/jira-tools/skills/jira-get-issue/: SKILL.md
plugins/jira-tools/skills/jira-search/: SKILL.md
skills/: code_review.json  summarize.json  translate.json
src/: EchoCommand.cpp  HttplibServer.cpp  JsonSchemaValidator.cpp  Logger.cpp  ProtocolHandler.cpp  ThreadPool_header.cpp  UwsServer.cpp  demo_client.cpp  main.cpp  server_entry.cpp
src/commands/: CommandRegistry.cpp  EchoCommand.cpp
src/core/: Config.cpp  Logger.cpp  ProtocolHandler.cpp  ThreadPool.cpp
src/discovery/: CompositeCommand.cpp  McpServerRegistry.cpp
src/http/: HttplibClient.cpp
src/llm/: LLMCommand.cpp  LiteLLMProvider.cpp
src/plugins/: DlPlugin.cpp  NativePluginAdapter.cpp  NativePluginLoader.cpp  ScriptPluginAdapter.cpp  ScriptPluginLoader.cpp
src/security/: ApiKeyValidator.cpp  RateLimiter.cpp  SecurityHeaders.cpp
src/server/: HttplibServer.cpp  StdioTransport.cpp  UwsServer.cpp
src/skills/: PluginLoader.cpp  SkillCommand.cpp  SkillEngine.cpp  SkillToolAdapter.cpp
src/validation/: InputSanitizer.cpp  JsonSchemaValidator.cpp
tests/: CommandRegistryTest.cpp  CommandRegistry_test.cpp  ConfigTest.cpp  Config_test.cpp  DesktopNotification_test.cpp  InputSanitizerTest.cpp  InputSanitizer_test.cpp  McpServerRegistryTest.cpp  McpServerRegistry_test.cpp  NativePlugin_test.cpp  PluginLoader_test.cpp  ProtocolHandlerTest.cpp  ProtocolHandler_test.cpp  RateLimiterTest.cpp  RateLimiter_test.cpp  ScriptPluginAdapter_test.cpp  ScriptPluginLoader_test.cpp  ScriptPlugin_Integration_test.cpp  SkillEngineTest.cpp  SkillEngine_test.cpp  SkillToolAdapter_test.cpp  StdioTransportTest.cpp  StdioTransport_test.cpp
tests/test_plugins/echo-plugin/: plugin.json
tests/test_plugins/echo-plugin/scripts/: echo_plugin.py
